# LBP

./: README.md  presentation.pptx  pyproject.toml
data/raw/: communes_light_2022.csv
notebooks/: exploration.ipynb
src/: config.py
